--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major"><!--[-->Welcome to<!--]--><br />
 									<!--[-->Al-Rehman Jewelers<!--]--></h1>
-									<p><!--[-->Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus.<!--]--></p>
+									<p><!--[-->Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <!--]--></p>
 									<ul class="actions">
 										<li><a href="#first" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
@@ -106,7 +106,7 @@
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
-										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.9047798566135!2d73.04208521581423!3d33.685529680707454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfbfd3b26f9f15%3A0x6ea919aec6887140!2sAl-Rehman+Jewellers!5e0!3m2!1sen!2s!4v1510908053338" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+										<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.9047798566135!2d73.04208521581423!3d33.685529680707454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38dfbfd3b26f9f15%3A0x6ea919aec6887140!2sAl-Rehman+Jewellers!5e0!3m2!1sen!2s!4v1510908053338" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
