--- a/index.html
+++ b/index.html
@@ -114,19 +114,16 @@
 											<li class="icon fa-envelope"><a href="#">atif@example.com</a></li>
 											<li class="icon fa-facebook"><a href="#">facebook.com/page</a></li>
 										</ul>
+										<!-- Copyright -->
+										<div class="copyright">&copy; Al-Rehman Jewelers 2006-2017</a>.</div>
 									</div>
 								</div>
 							</section>
 
 						<!-- Panel -->
-								</div>
+						</div> <!-- wrapper -->
 
-						<!-- Copyright -->
-							<div class="copyright">&copy; Al-Rehman Jewelers 2006-2017</a>.</div>
-
-					</div>
-
-			</div>
+					</div> <!-- Page Wrapper -->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
