--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 											<li class="icon fa-facebook"><a href="#">facebook.com/page</a></li>
 										</ul>
 										<!-- Copyright -->
-										<div class="copyright">&copy; Al-Rehman Jewelers 2006-2017</a>.</div>
+										<div class="copyright">&copy; Al-Rehman Jewelers 2006-2017</a></div>
 									</div>
 								</div>
 							</section>
